[metadata]
name = gdalutils
version = 1.0.0
description = A collection of utilities for working with GDAL.
long_description = file: README.md
author = EventKit Contributors
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
    Django >= 3.0.0, < 4.0.0
    GDAL==3.2.1
    MapProxy==1.13.2

[coverage:run]
include = auth/*
omit = *migrations*, *tests*
plugins =
    django_coverage_plugin

[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[mypy]
python_version = 3.9
check_untyped_defs = True
ignore_missing_imports = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
plugins = mypy_django_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = "config.settings"

[mypy-*.migrations.*]
# Django migrations should not produce any errors:
ignore_errors = True

[pylint.'FORMAT']
good-names=a,i,j,k,pk

[pylint.'MESSAGES CONTROL']
disable = fixme, missing-class-docstring, missing-module-docstring, missing-function-docstring, too-many-arguments, unused-argument, too-few-public-methods, broad-except, too-many-locals, too-many-branches

[tool:pytest]
DJANGO_SETTINGS_MODULE = "config.settings"
